--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Optimize generated accessors similarly to Class::Tiny 1.006
 
 0.002     2015-12-17 18:26:18 EST
   - Removed non-core dependencies
