setter case as single statement

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Further optimize generated accessors for chaining case (thanks haarg)
 
 0.003     2016-09-10 15:55:29 EDT
   - Optimize generated accessors similarly to Class::Tiny 1.006
